[tool.poetry]
name = "my_python_commands"
version = "0.1.0"
description = "linux commands built with python for my own use."
authors = ["t4aru"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
